src/SideBar.css
.logo {
  font-weight: 700;
}
.sidebar {
  background-image: url('./images/cloud_background.jpg');
  background-position: right;
  color: #163d5f;
  width: 17vw;
  height: 100vh;
  display: flex;
  justify-content: left;
  align-items: center;
  flex-direction: column;
  margin: 0;
  padding: 10px;
  opacity: 1.0;
};

